사이드메뉴 완성하기

--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
                 <nav class="gnb-area">
                     <ul class="gnb-list">
                         <li class="gnb-item">
-                            <a href="" class="team">Teams</a>
-                            <ul class="sub-list">
-                                <li class="sub-item"></li>
-                                <li class="sub-item"></li>
-                                <li class="sub-item"></li>
-                                <li class="sub-item"></li>
-                            </ul>
+                            <a href="">Teams</a>
+                            <div class="sub-menu">
+                                <ul class="sub-list">
+                                    <li class="sub-item"><a href=""> Teach</a></li>
+                                    <li class="sub-item"><a href=""> Design</a></li>
+                                    <li class="sub-item"><a href=""> Service & Business</a></li>
+                                    <li class="sub-item"><a href=""> Corporate</a></li>
+                                </ul>
+                            </div>
                         </li>
                         <li class="gnb-item"><a href="">People</a></li>
                         <li class="gnb-item"><a href="">Benefits</a></li>
@@ -44,7 +46,8 @@
                         <li class="gnb-item"><a href="">Login</a></li>
                         <li class="gnb-item"><a href="">FAQ</a></li>
                     </ul>
-                    <button class="btn-menu">모바일메뉴</button>
+                    <button class="btn-menu"><span class="blind">모바일메뉴</span></button>
+                    <button class="btn-close"><span class="blind">창닫기</span></button>
                 </nav>
                 <div class="side-menu">
                     <div class="gnb-area">
@@ -52,10 +55,10 @@
                             <li class="gnb-item">
                                 <a href="" class="team">Teams</a>
                                 <ul class="sub-list">
-                                    <li class="sub-item"></li>
-                                    <li class="sub-item"></li>
-                                    <li class="sub-item"></li>
-                                    <li class="sub-item"></li>
+                                    <li class="sub-item">Tech</li>
+                                    <li class="sub-item">Design</li>
+                                    <li class="sub-item">Service & Business</li>
+                                    <li class="sub-item">Corporate</li>
                                 </ul>
                             </li>
                             <li class="gnb-item"><a href="">People</a></li>
