--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>naver carrer</title>
     <!-- jqurey -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="./assets/css/layout.css">
     <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="shortcut icon" type="image/x-icon" size="24x24" href="/assets/images/icon/naver.ico">
 
     <!-- js 구역 -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./assets/js/jquery-3.6.0.min.js"></script>
     <script src="./assets/js/custom.js"></script>
@@ -46,7 +49,7 @@
                         <li class="gnb-item"><a href="">Login</a></li>
                         <li class="gnb-item"><a href="">FAQ</a></li>
                     </ul>
-                    <button class="btn-menu"><span class="blind">모바일메뉴</span></button>
+                    <button class="btn-menu active"><span class="blind">모바일메뉴</span></button>
                     <button class="btn-close"><span class="blind">창닫기</span></button>
                 </nav>
                 <div class="side-menu">
@@ -64,7 +67,7 @@
                             <li class="gnb-item"><a href="">People</a></li>
                             <li class="gnb-item"><a href="">Benefits</a></li>
                             <li class="gnb-item"><a href="">Culture</a></li>
-                            <li class="gnb-item"><a href="">Velue</a></li>
+                            <li class="gnb-item line"><a href="">Velue</a></li>
                         </ul>
                     </div>
                     <div class="util-area">
@@ -158,6 +161,10 @@
                     </fieldset>
                 </form>
             </section>
+            <div class="mb-search">
+                <button class="btn-job">Search Jobs</button>
+                <div class="icon-search"><span class="blind">돋보기아이콘</span></div>
+            </div>
         </div>    
             <section class="sc-teams">
                 <div class="common-inner">
@@ -306,48 +313,48 @@
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
                                         <!-- inner는  위에 커먼 이너로 나왔기 때문에 개인용도로 사용이 가능하다 굳이 사족을 붙일 이유는 없다 -->
-                                        <a href="" class="bf-inner">
-                                            <img src="./assets/images/img/benefits01.png" alt="Financial Wellbeing 이미지">
+                                        <div class="img-box">
+                                            <a href="" class="bf-inner"><img src="./assets/images/img/benefits01.png" alt="Financial Wellbeing 이미지"></a>
+                                        </div>
                                             <div class="text-box">
                                                 <h3 class="sc-desc">Financial Wellbeing</h3>
                                                 <p class="bf-text">회사의 미래가치와 성과를 함께 나누고,<br>생활의 안정을 지원합니다.</p>
                                             </div>
-                                        </a>
                                     </div>
                                     <div class="swiper-slide">
-                                        <a href="" class="bf-inner">
-                                            <img src="./assets/images/img/benefits02.png" alt="Time & Refresh 이미지">
+                                        <div class="img-box">
+                                            <a href="" class="bf-inner"><img src="./assets/images/img/benefits02.png" alt="Time & Refresh 이미지"></a>
+                                        </div>
                                             <div class="text-box">
                                                 <h3 class="sc-desc">Time & Refresh</h3>
                                                 <!-- 개인용도로 사용가능 사족 필요없다 -->
                                                 <p class="bf-text">저마다 몰입할 수 있는 환경이 다름을 알기에 시간과 공간 선택의 자율성을 가지며,<br>리프레시를 위한 충전의 기회도 마련합니다.</p>
-                                            </div>
-                                        </a>
+                                            </div> 
                                     </div>
                                     <div class="swiper-slide">
-                                        <a href="" class="bf-inner">
-                                            <img src="./assets/images/img/benefits03.png" alt="WorkSpace 이미지">
+                                        <div class="img-box">
+                                            <a href="" class="bf-inner"><img src="./assets/images/img/benefits03.png" alt="WorkSpace 이미지"></a>
+                                        </div>
                                             <div class="text-box">
                                                 <h3 class="sc-desc">Work Space</h3>
                                                 <p class="bf-text">공간이 우리에게 미치는 영향을 잘 알기에,<br>우리가 일할 공간을 직접 설계합니다.</p>
                                             </div>
-                                        </a>
                                     </div>
                                     <div class="swiper-slide">
-                                        <a href="" class="bf-inner">
-                                            <img src="./assets/images/img/benefits04.png" alt="Meal & Snack 이미지">
+                                        <div class="img-box">
+                                            <a href="" class="bf-inner"><img src="./assets/images/img/benefits04.png" alt="Meal & Snack 이미지"></a>
+                                        </div>
                                             <div class="text-box">
                                                 <h3 class="sc-desc">Meal & Snack</h3>
                                                 <p class="bf-text">우리를 움직이는 에너지원이자, 동료들과의 대화를 이끌어내는 음식을 풍성하게 제공합니다.</p>
                                             </div>
-                                        </a>
                                     </div>
                                 </div>
                                 <div class="control-box">
                                     <div class="button-prev"><span class="blind">이전</span></div>
                                     <div class="button-next"><span class="blind">다음</span></div>
                                 </div>
-                                            </div>
+                            </div>
                     </section>
                     <!-- section, class 명 수정 -->
                     <section class="sc-apply">
@@ -374,7 +381,7 @@
                         <option value="">NAVER LABS</option>
                     </select>
                 </div>
-                    </footer>
             </div>
+    </footer>        
 </body>
 </html>
